# horizon_poc

./: .env  main.py  pyproject.toml
app/: config.py
app/models/: conversation.py  student.py
app/services/: intelligence.py  memory.py  mentor.py
app/utils/: prompts.py
frontend/: app.py
