[project]
name = "horizon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-mongodb>=0.5.0",
    "langchain-ollama>=0.2.3",
    "pydantic>=2.10.6",
    "pymongo>=4.11.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
]
